stage 1-- next-> debugging, handle errors and write tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=hng-s2-userauth
+
+spring.datasource.url=jdbc:postgresql://localhost:9898/hng-userauth
+spring.datasource.username=postgres
+spring.datasource.password=Tobiloba_98
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+jwt.secret = ${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
